
Version (SVN)
-------------

XML:   Resolved issue CASTOR-1440 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed Configuration.loadProperties(String,String) to close resource streams after usage.
       Details: http://jira.codehaus.org/browse/CASTOR-1440
       (Werner - 20060601)

XML:   Resolved issue CASTOR-1384 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with NPE related to field mappings without type declaration.
       Details: http://jira.codehaus.org/browse/CASTOR-1384
       (Werner - 20060530)
       
JDO:   Resolved issue CASTOR-1429 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed ClassNotFoundException related to using a custom XMLNaming scheme.
       Details: http://jira.codehaus.org/browse/CASTOR-1429
       (Werner - 200605023)

JDO:   Resolved issue CASTOR-1439 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added test case for Castor JDO CTF to test database.isPersistent().
       Details: http://jira.codehaus.org/browse/CASTOR-1439
       (Werner - 20060529)

JDO:   Resolved issue CASTOR-1432 using contribution from Pawel Pesz [castor@insert.net.pl]
       Fixed problem with numbered parameters in SQL pass-through queries.
       Details: http://jira.codehaus.org/browse/CASTOR-1432
       (Werner - 20060528)

XML:   Resolved issue CASTOR-1419 using contribution from Jason Mihalick [jason@jCraftsmen.com]
       Fixed problem with NPE in SAXAny (related to the use of namespaces).
       Details: http://jira.codehaus.org/browse/CASTOR-1419
       (Werner - 20060525)

XML:   Resolved issue CASTOR-1427 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for unmarshalling attributes of type byte[].
       Details: http://jira.codehaus.org/browse/CASTOR-1427
       (Werner - 20060524)

XML:   Resolved issue CASTOR-690 using contribution from Doug Berkland [berkland@spamcop.net]